[metadata]
name = jr100emulib
version = attr:jr100emulib.__version__
author = Kenichi Miyata
author_email = kemusiro@asamomiji.jp
description = 'Support library for JR-100 emulator'
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/kemusiro/jr100emulib
license = MIT

[options]
packages = find:
install_requires =
    numpy
    scipy

[options.entry_points]
console_scripts =
    fskloader = jr100emulib.fskloader:main
